# backend-practice-101

./: README.md  두 번째 과제 - 유저 만들기.md  첫 번째 과제 - 게시글 만들기.md
app/: .pre-commit-config.yaml  pyproject.toml
app/src/: container.py  main.py
app/src/application/use_cases/: abstract.py  create_post.py  delete_post.py  read_post.py  read_posts.py  update_post.py
app/src/domain/: entities.py  exceptions.py  factory.py  repository.py  value_objects.py
app/src/infrastructure/: in_mem_repository.py
app/src/presentation/: exception_handlers.py
app/src/presentation/end_points/: __init__.py  create_post.py  delete_post.py  read_post.py  read_posts.py  update_post.py
app/tests/presentation/: conftest.py
app/tests/presentation/end_points/: test_create_post.py  test_delete_post.py  test_read_post.py  test_read_posts.py  test_update_post.py
app/tests/services/: conftest.py  test_create_post.py  test_delete_post.py  test_read_posts.py  test_update_post.py
backend-study/: pom.xml
backend-study/src/main/java/me/doflamingo/backendstudy/: BackendStudyApplication.java
backend-study/src/main/java/me/doflamingo/backendstudy/post/application/: PostService.java
backend-study/src/main/java/me/doflamingo/backendstudy/post/domain/: Post.java  PostRepository.java
backend-study/src/main/java/me/doflamingo/backendstudy/post/presentation/: PostController.java
backend-study/src/main/java/me/doflamingo/backendstudy/user/domain/: User.java  UserRole.java
backend-study/src/test/java/me/doflamingo/backendstudy/: BackendStudyApplicationTests.java
(+6 files in other folders)
