[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["heumsi <heumsi@naver.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.63.0"}
dependency-injector = "^4.29.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
pre-commit = "^2.11.1"
commitizen = "^2.17.0"

[tool.black]
line-length = 119

[tool.pycln]
all = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 119

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
